# chip8-emulator

./: Cargo.toml  README.md
src/: main.rs
src/chip8/: cpu.rs  mod.rs  opcodes_exec.rs
src/chip8/chip_8_main_loop/: mod.rs  opcodes.rs
src/external_resources/: input.rs  mod.rs  rom.rs  screen.rs
