[package]
name = "rusty-nes-emulator"
version = "0.1.0"
authors = ["Lighty <crackon0410@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.7", features = ["log", "serde1"] }

[dependencies.sdl2]
version="0.33.0"
features=["gfx"]